added authorization check
