# argos-service-adapter-in-rest/src/main/java/com/rabobank/argos/service/adapter/in/rest/account/PersonalAccountRestService.java
@@ -22,6 +22,7 @@ import com.rabobank.argos.domain.key.KeyIdProvider;
 import com.rabobank.argos.domain.key.KeyIdProviderImpl;
 import com.rabobank.argos.domain.key.KeyPair;
 import com.rabobank.argos.domain.permission.LocalPermissions;
+import com.rabobank.argos.domain.permission.Permission;
 import com.rabobank.argos.service.adapter.in.rest.api.handler.PersonalAccountApi;
 import com.rabobank.argos.service.adapter.in.rest.api.model.RestKeyPair;
 import com.rabobank.argos.service.adapter.in.rest.api.model.RestLocalPermissions;
@@ -31,6 +32,8 @@ import com.rabobank.argos.service.domain.account.AccountSearchParams;
 import com.rabobank.argos.service.domain.account.AccountService;
 import com.rabobank.argos.service.domain.hierarchy.LabelRepository;
 import com.rabobank.argos.service.domain.security.AccountSecurityContext;
+import com.rabobank.argos.service.domain.security.LabelIdCheckParam;
+import com.rabobank.argos.service.domain.security.PermissionCheck;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -93,6 +96,7 @@ public class PersonalAccountRestService implements PersonalAccountApi {
     }
 
     @Override
+    @PermissionCheck(permissions = {Permission.ASSIGN_ROLE})
     public ResponseEntity<RestPersonalAccount> updatePersonalAccountRolesById(String accountId, List<String> roleNames) {
         return accountService.updatePersonalAccountRolesById(accountId, roleNames)
                 .map(personalAccountMapper::convertToRestPersonalAccount)
@@ -115,7 +119,8 @@ public class PersonalAccountRestService implements PersonalAccountApi {
     }
 
     @Override
-    public ResponseEntity<RestLocalPermissions> updateLocalPermissionsForLabel(String accountId, String labelId, List<RestPermission> restLocalPermission) {
+    @PermissionCheck(permissions = {Permission.LOCAL_PERMISSION_EDIT})
+    public ResponseEntity<RestLocalPermissions> updateLocalPermissionsForLabel(String accountId, @LabelIdCheckParam String labelId, List<RestPermission> restLocalPermission) {
         verifyParentLabelExists(labelId);
         LocalPermissions newLocalPermissions = LocalPermissions.builder().labelId(labelId).permissions(personalAccountMapper.convertToLocalPermissions(restLocalPermission)).build();
         PersonalAccount personalAccount = accountService.updatePersonalAccountLocalPermissionsById(accountId, newLocalPermissions).orElseThrow(this::accountNotFound);
